로그인 부분 디자인 수정

--- a/styles/pages/Main/Main.module.scss
+++ b/styles/pages/Main/Main.module.scss
@@ -191,7 +191,7 @@
 .account_logout_box {
     height: 45px;
     width: auto;
-    padding: auto 20px;
+    padding: 0 20px;
     padding-left: 15px;
     padding-right: 15px;
     background-color: #191919;
