--- a/styles/pages/auth/Login/Login.module.scss
+++ b/styles/pages/auth/Login/Login.module.scss
@@ -2,7 +2,7 @@
 
 .box {
     display: flex;
-    justify-content: center;
+    // justify-content: center;
     align-items: center;
     height: calc(100vh - 70px);
     flex-direction: column;
