--- a/styles/pages/Main/Main.module.scss
+++ b/styles/pages/Main/Main.module.scss
@@ -81,6 +81,91 @@
     margin-left: -10px;
 }
 
+.meal_container {
+    // position: relative;
+    margin: auto;
+    margin-top: 15px;
+    width: $page-width;
+    height: auto;
+    border-radius: 15px;
+    background-color: white;
+    padding: 25px;
+    margin-bottom: 15px;
+}
+
+.meal_title {
+    font-family: "pretendard";
+    font-weight: 700;
+    font-size: 20px;
+    text-align: left;
+    margin-bottom: 10px;
+}
+
+.meal_box {
+    display: flex;
+    flex: 3;
+    flex-direction: column;
+}
+
+.meal_item {
+    padding: 5px;
+    padding-left: 0;
+    border-radius: 15px;
+    width: 100%;
+    margin-bottom: 10px;
+    // box-shadow: 0px 3px 12px 2px rgba(182, 182, 182, 0.2);
+    &:last-child {
+        margin-bottom: 0;
+    }
+}
+
+.meal_item_title {
+    font-family: "pretendard";
+    font-size: 17px;
+    font-weight: 600;
+    text-align: left;
+    display: inline;
+    padding: 5px 10px;
+    border-radius: 10px;
+    // margin-left: -5px;
+}
+
+.meal_item_menu {
+    white-space: nowrap;
+    font-family: "pretendard";
+    font-size: 17px;
+    font-weight: 300;
+    text-align: left;
+    margin-top: 15px;
+}
+
+.meal_notice {
+    font-family: 'pretendard';
+    font-weight: 400;
+    font-size: 15px;
+    color: rgb(80, 80, 80);
+    margin-top: 10px;
+    user-select: none;
+    padding-left: 15px;
+    margin-bottom: 10px;
+}
+
+#breakfast {
+    background-color: rgb(255, 245, 223);
+}
+
+#lunch {
+    background-color: rgb(238, 255, 215);
+}
+
+#dinner {
+    background-color: rgb(249, 255, 200);
+}
+
+.space {
+    height: 15px;
+}
+
 .warp_container {
     // position: relative;
     margin: auto;
@@ -236,12 +321,15 @@
 }
 
 @media (max-width: 730px) {
-    .warp_container {
+    .warp_container,
+    .meal_container {
         width: calc(100% - 30px);
     }
     .account_card {
         width: calc(100% - 30px);
     }
+
+
 }
 
 #account_nologin_text {
@@ -251,11 +339,7 @@
 #account_nologin {
     background: #005c97;
     background: -webkit-linear-gradient(to right, #363795, #005c97);
-    background: linear-gradient(
-        to right,
-        #363795,
-        #005c97
-    );
+    background: linear-gradient(to right, #363795, #005c97);
 }
 
 #umbrella {
