--- a/styles/pages/Main/Main.module.css
+++ b/styles/pages/Main/Main.module.css
@@ -1,70 +1,86 @@
 .video_box {
   position: relative;
-  height: 500px;
-  width: calc(100% - 30px);
-  max-width: 685px;
-  background-color: rgb(190, 190, 190);
-  margin: auto;
+  z-index: 10;
+  height: -moz-fit-content;
+  height: fit-content;
+  max-height: 412px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding-top: 0;
   overflow: hidden;
-  border-radius: 30px;
+  border-radius: 15px;
+  margin-left: 15px;
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
+  -webkit-user-drag: none;
+  width: calc(100% - 30px);
 }
 
 .video {
-  position: absolute;
-  height: 100%;
-  width: auto;
-  z-index: 1;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1.1);
-}
-
-.video_bug {
-  width: 100%;
-  height: auto;
-}
-
-.video_text_box {
-  position: absolute;
-  width: 100%;
-  max-width: 685px;
-  height: 500px;
-  background-color: rgba(50, 50, 50, 0.7);
-  -webkit-backdrop-filter: blur(9px);
-          backdrop-filter: blur(9px);
-  border-radius: 30px;
-  z-index: 2;
+  filter: blur(0px);
+  width: 100vw;
+  line-height: 0;
 }
 
 .video_text {
-  text-align: left;
-  font-family: "pretendard";
-  font-weight: 600;
-  font-size: 22px;
-  color: white;
   position: absolute;
-  bottom: 67px;
-  left: 35px;
-}
-
-.video_top_text {
-  text-align: left;
+  z-index: 20;
+  bottom: 10px;
+  padding: 10px;
+  background-color: rgba(230, 230, 230, 0.5);
+  border-radius: 15px;
   font-family: "pretendard";
   font-weight: 500;
   font-size: 16px;
-  color: white;
-  position: absolute;
-  top: 35px;
-  left: 35px;
+  text-align: center;
 }
 
-.video_space {
-  height: 15px;
+#video_text_school {
+  background: linear-gradient(to left, #0575e6, #021b79);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  font-weight: 700;
 }
 
+.slogan {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  margin: auto;
+  margin-top: 15px;
+  width: 685px;
+  height: auto;
+  border-radius: 15px;
+  background: linear-gradient(270deg, #ffdddd, #ffe5dd, #ffeedd, #fff6dd, #ffffdd, #f6ffdd, #eeffdd, #e5ffdd, #ddffdd, #ddfff6, #ddffff, #ddf6ff, #ddeeff, #dde5ff, #ddddff, #e5ddff, #eeddff);
+  background-size: 600% 600%;
+  animation: lightCard 10s linear infinite;
+  padding: 15px;
+  margin-bottom: 15px;
+}
+.slogan .text {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 800;
+}
+.slogan #nowarp {
+  white-space: nowrap;
+}
+
+@keyframes lightCard {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
 .highlight {
   background-color: rgb(255, 255, 255);
   color: black;
@@ -316,18 +332,13 @@
   color: black;
 }
 
-@media (max-width: 670px) {
-  .video {
-    width: auto;
-    height: 100%;
-  }
-}
 @media (max-width: 730px) {
   .warp_container,
   .meal_container {
     width: calc(100% - 30px);
   }
-  .account_card {
+  .account_card,
+  .slogan {
     width: calc(100% - 30px);
   }
 }
