--- a/styles/components/BottomNav/BottomNav.module.scss
+++ b/styles/components/BottomNav/BottomNav.module.scss
@@ -29,13 +29,23 @@
         &:focus{
             outline:none;
         }
+        display: flex;
+        flex-direction: column;
+        height: 55px;
+        justify-content: center;
+        padding-left: 15px;
+        padding-right: 15px;
     }
 
     .icon {
-        padding-left: 10px;
-        padding-right: 10px;
-        position: relative;
-        top: 50%;
+        // top: 50%;
         vertical-align: middle;
+    }
+
+    .name {
+        font-family: 'pretendard';
+        font-size: 12px;
+        font-weight: 500;
+        text-align: center;
     }
 }
