--- a/styles/components/ServiceHeader/ServiceHeader.module.css
+++ b/styles/components/ServiceHeader/ServiceHeader.module.css
@@ -30,11 +30,12 @@
 
 .highlight {
   background-color: rgb(7, 0, 100);
+  border-radius: 5px;
   color: white;
   padding: 3px 7px;
   margin-right: 3px;
   margin-left: 5px;
-  font-weight: 800;
+  font-weight: 700;
 }
 
 .menu_box {
@@ -51,8 +52,8 @@
   font-family: "pretendard";
   font-weight: 400;
   font-size: 16px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
   line-height: 70px;
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -69,6 +70,7 @@
   text-decoration: underline;
   text-underline-offset: 10px;
   text-decoration-color: black;
+  text-decoration-thickness: 1px;
 }
 
 .drawer_button {
