우산대여 신청화면 수정 / 우산대여 홈화면 안내문구 추가

--- a/styles/components/Input/Input.module.scss
+++ b/styles/components/Input/Input.module.scss
@@ -2,15 +2,34 @@
   border-radius: 10px;
   border: 1px solid #b9b9b9;
   font-family: 'pretendard';
-  font-size: 18px;
+  font-size: 16px;
   padding: 15px 15px;
   margin-top: 10px;
-
   transition: border .3s;
+  width: 100%;
 
   &:focus {
     outline: none;
     border: 1px solid black;
     transition: border .3s;
   }
+}
+
+.box {
+  width: calc(100% - 60px);
+  max-width: 730px;
+  margin: auto;
+  margin-top: 15px;
+}
+
+.label {
+  font-family: 'pretendard';
+  font-size: 15px;
+  text-align: left;
+  color: black;
+  font-weight: 700;
+}
+
+#red {
+  color: red;
 }
