--- a/styles/pages/services/Rental/Add/Add.module.css
+++ b/styles/pages/services/Rental/Add/Add.module.css
@@ -24,6 +24,14 @@
   background: linear-gradient(to right, #870000, #190a05);
 }
 
+.loading {
+  text-align: center;
+  font-family: "pretendard";
+  font-weight: 700;
+  font-size: 20px;
+  color: white;
+}
+
 .title {
   -webkit-user-select: none;
      -moz-user-select: none;
