--- a/styles/pages/services/Rental/Add/Add.module.scss
+++ b/styles/pages/services/Rental/Add/Add.module.scss
@@ -25,6 +25,14 @@
     background: linear-gradient(to right, #870000, #190a05);
 }
 
+.loading {
+    text-align: center;
+    font-family: "pretendard";
+    font-weight: 700;
+    font-size: 20px;
+    color: white;
+}
+
 .title {
     user-select: none;
 
