우산대여 신청 화면 완료

--- a/styles/pages/services/Rental/Add/Add.module.scss
+++ b/styles/pages/services/Rental/Add/Add.module.scss
@@ -59,3 +59,47 @@
     font-size: 30px;
     color: white;
 }
+
+.sheet_title {
+    font-family: 'pretendard';
+    font-size: 20px;
+    font-weight: 700;
+    text-align: center;
+    margin-top: 20px;
+    color: black;
+}
+
+.sheet_description {
+    font-family: 'pretendard';
+    font-size: 15px;
+    font-weight: 500;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    color: rgb(50, 50, 50);
+}
+
+.sheet_loading_circle {
+    text-align: center;
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
+
+.sheet_icon {
+    vertical-align: middle;
+    margin-top: 20px;
+    color: red;
+}
+
+.emoji_font {
+    width: 30px;
+    text-align: center;
+    margin: 20px auto;
+    display: flex;
+}
+
+@media (max-width: 768px) {
+    .bottom_sheet_mobile {
+        height: 55px;
+    }
+}
