--- a/styles/components/Input/Input.module.css
+++ b/styles/components/Input/Input.module.css
@@ -29,6 +29,19 @@
   font-weight: 700;
 }
 
+.error_text {
+  font-family: "pretendard";
+  font-weight: 500;
+  font-size: 15px;
+  margin-left: 15px;
+  margin-top: 5px;
+  color: rgb(150, 0, 0);
+}
+
 #red {
   color: red;
+}
+
+#error {
+  border-color: red;
 }/*# sourceMappingURL=Input.module.css.map */
