--- a/styles/pages/services/Rental/Add/Add.module.css
+++ b/styles/pages/services/Rental/Add/Add.module.css
@@ -10,6 +10,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  margin-top: 20px;
 }
 
 #success {
@@ -103,4 +104,18 @@
   .bottom_sheet_mobile {
     height: 55px;
   }
+}
+.page_title {
+  width: calc(100% - 40px);
+  max-width: 730px;
+  margin: auto;
+}
+.page_title .text {
+  font-family: "pretendard";
+  font-weight: 700;
+  font-size: 25px;
+  text-align: left;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }/*# sourceMappingURL=Add.module.css.map */
