--- a/styles/pages/services/Rental/Add/Add.module.scss
+++ b/styles/pages/services/Rental/Add/Add.module.scss
@@ -11,6 +11,7 @@
     justify-content: space-between;
     align-items: center;
     // border: 1px solid rgb(15, 33, 97);
+    margin-top: 20px;
 }
 
 #success {
@@ -101,5 +102,19 @@
 @media (max-width: 768px) {
     .bottom_sheet_mobile {
         height: 55px;
+    }
+}
+
+.page_title {
+    width: calc(100% - 40px);
+    max-width: 730px;
+    margin: auto;
+
+    & .text {
+        font-family: 'pretendard';
+        font-weight: 700;
+        font-size: 25px;
+        text-align: left;
+        user-select: none;
     }
 }
