--- a/styles/pages/services/Rental/Home/Home.module.css
+++ b/styles/pages/services/Rental/Home/Home.module.css
@@ -103,6 +103,10 @@
   margin-bottom: 50px;
 }
 
+.bottom_space {
+  margin-bottom: 20px;
+}
+
 .rule {
   width: calc(100% - 30px);
   margin: auto;
@@ -298,5 +302,8 @@
   }
   .bottom_sheet {
     margin-bottom: 55px;
+  }
+  .bottom_space {
+    margin-bottom: 75px;
   }
 }/*# sourceMappingURL=Home.module.css.map */
