--- a/styles/pages/services/Rental/Admin/Admin.module.scss
+++ b/styles/pages/services/Rental/Admin/Admin.module.scss
@@ -81,6 +81,21 @@
     right: 10px;
 }
 
+.login_button {
+    cursor: pointer;
+    user-select: none;
+    font-family: 'pretendard';
+    font-size: 16px;
+    margin:auto;
+    margin-top: 20px;
+    background-color: black;
+    color: white;
+    font-weight: 400;
+    text-align: center;
+    padding: 10px 17px;
+    border-radius: 20px;
+}
+
 .bottom_space {
     margin-bottom: 20px;
 }
