--- a/styles/pages/services/Rental/Add/Add.module.css
+++ b/styles/pages/services/Rental/Add/Add.module.css
@@ -118,4 +118,23 @@
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
+}
+
+.not_open {
+  display: flex;
+  flex: 2;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  flex-direction: column;
+}
+.not_open .text {
+  font-family: "pretendard";
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+  margin-top: 20px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }/*# sourceMappingURL=Add.module.css.map */
