--- a/styles/pages/services/Rental/Add/Add.module.scss
+++ b/styles/pages/services/Rental/Add/Add.module.scss
@@ -62,7 +62,7 @@
 }
 
 .sheet_title {
-    font-family: 'pretendard';
+    font-family: "pretendard";
     font-size: 20px;
     font-weight: 700;
     text-align: center;
@@ -71,7 +71,7 @@
 }
 
 .sheet_description {
-    font-family: 'pretendard';
+    font-family: "pretendard";
     font-size: 15px;
     font-weight: 500;
     text-align: center;
@@ -111,10 +111,28 @@
     margin: auto;
 
     & .text {
-        font-family: 'pretendard';
+        font-family: "pretendard";
         font-weight: 700;
         font-size: 25px;
         text-align: left;
+        user-select: none;
+    }
+}
+
+.not_open {
+    display: flex;
+    flex: 2;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    flex-direction: column;
+
+    & .text {
+        font-family: "pretendard";
+        font-size: 20px;
+        font-weight: 600;
+        text-align: center;
+        margin-top: 20px;
         user-select: none;
     }
 }
