--- a/styles/components/Footer/Footer.module.scss
+++ b/styles/components/Footer/Footer.module.scss
@@ -1,30 +1,64 @@
 .footer {
-    width: 100%;
+    width: fit-content;
     height: 120px;
-    position: absolute;
-    transform: translateY(-100%);
+    // position: absolute;
+    // transform: translateY(-100%);
     display: flex;
+    margin: auto;
 }
 
 .space {
-    margin-top: calc(20px + 120px);
+    margin: auto;
+    // margin-top: calc(20px + 120px);
 }
 
 .text {
-    font-family: 'pretendard';
+    font-family: "pretendard";
     font-weight: 300;
     font-size: 15px;
-    text-align: center;
+    text-align: left;
     color: black;
     line-height: 20px;
 }
 
 .github {
-    margin: 10px auto;
+    // margin: 10px auto;
     font-weight: 400;
 
     & a {
-        color: #0042ff;
+        color: #00258b;
+        font-weight: 500;
+    }
+}
+
+.table {
+    margin: auto;
+    border-collapse: collapse;
+}
+
+.name {
+    font-family: "pretendard";
+    font-weight: 600;
+    font-size: 16px;
+    text-align: right;
+    color: black;
+    padding-right: 5px;
+}
+
+.value {
+    font-family: "pretendard";
+    font-weight: 400;
+    font-size: 16px;
+    text-align: left;
+    color: black;
+}
+
+.project {
+    text-align: center;
+    padding-top: 5px;
+
+    & a {
+        color: #00258b;
         font-weight: 500;
     }
 }
