--- a/styles/pages/Main/Main.module.css
+++ b/styles/pages/Main/Main.module.css
@@ -332,6 +332,46 @@
   color: black;
 }
 
+.notice {
+  width: calc(100% - 30px);
+  margin: auto;
+  max-width: 730px;
+  padding: 20px;
+  background: white;
+  border-radius: 15px;
+  border: 1px solid rgb(204, 204, 204);
+  box-shadow: 0px 3px 15px 0 rgba(155, 155, 155, 0.5);
+  margin-top: 20px;
+}
+.notice .title {
+  text-align: left;
+  font-family: "pretendard";
+  font-size: 20px;
+  font-weight: 800;
+}
+.notice .table {
+  border-collapse: separate;
+  border-spacing: 0px 5px;
+  margin-top: 10px;
+}
+.notice .table_tbody {
+  width: 100%;
+  border-collapse: separate;
+}
+.notice .table_number {
+  font-weight: 700;
+  width: -moz-fit-content;
+  width: fit-content;
+  text-align: right;
+  vertical-align: top;
+}
+.notice .table_text {
+  font-weight: 400;
+  padding-left: 10px;
+  text-align: left;
+  vertical-align: top;
+}
+
 @media (max-width: 730px) {
   .warp_container,
   .meal_container {
