--- a/styles/pages/Main/Main.module.scss
+++ b/styles/pages/Main/Main.module.scss
@@ -54,7 +54,26 @@
     width: $page-width;
     height: auto;
     border-radius: 15px;
-    background: linear-gradient(270deg, #ffdddd, #ffe5dd, #ffeedd, #fff6dd, #ffffdd, #f6ffdd, #eeffdd, #e5ffdd, #ddffdd, #ddfff6, #ddffff, #ddf6ff, #ddeeff, #dde5ff, #ddddff, #e5ddff, #eeddff);
+    background: linear-gradient(
+        270deg,
+        #ffdddd,
+        #ffe5dd,
+        #ffeedd,
+        #fff6dd,
+        #ffffdd,
+        #f6ffdd,
+        #eeffdd,
+        #e5ffdd,
+        #ddffdd,
+        #ddfff6,
+        #ddffff,
+        #ddf6ff,
+        #ddeeff,
+        #dde5ff,
+        #ddddff,
+        #e5ddff,
+        #eeddff
+    );
     background-size: 600% 600%;
     animation: lightCard 10s linear infinite;
     padding: 15px;
@@ -325,6 +344,50 @@
     user-select: none;
     cursor: pointer;
     color: black;
+}
+
+.notice {
+    width: calc(100% - 30px);
+    margin: auto;
+    max-width: 730px;
+    padding: 20px;
+    background: white;
+    border-radius: 15px;
+    border: 1px solid rgb(204, 204, 204);
+    box-shadow: 0px 3px 15px 0 rgba(155, 155, 155, 0.5);
+    margin-top: 20px;
+
+    & .title {
+        text-align: left;
+        font-family: "pretendard";
+        font-size: 20px;
+        font-weight: 800;
+    }
+
+    & .table {
+        border-collapse: separate;
+        border-spacing: 0px 5px;
+        margin-top: 10px;
+    }
+
+    & .table_tbody {
+        width: 100%;
+        border-collapse: separate;
+    }
+
+    & .table_number {
+        font-weight: 700;
+        width: fit-content;
+        text-align: right;
+        vertical-align: top;
+    }
+
+    & .table_text {
+        font-weight: 400;
+        padding-left: 10px;
+        text-align: left;
+        vertical-align: top;
+    }
 }
 
 @media (max-width: 730px) {
