--- a/styles/pages/services/Rental/Home/Home.module.scss
+++ b/styles/pages/services/Rental/Home/Home.module.scss
@@ -108,7 +108,7 @@
     margin: auto;
     max-width: 730px;
     padding: 20px;
-    background: linear-gradient(to right, #000046, #1cb5e0); 
+    background: linear-gradient(to right, #000046, #1cb5e0);
     border-radius: 15px;
     // border: 1px solid rgb(204, 204, 204);
     box-shadow: 0px 3px 15px 0 rgba(155, 155, 155, 0.5);
@@ -222,6 +222,50 @@
 .bottom_sheet {
 }
 
+.notice {
+    width: calc(100% - 30px);
+    margin: auto;
+    max-width: 730px;
+    padding: 20px;
+    background: white;
+    border-radius: 15px;
+    border: 1px solid rgb(204, 204, 204);
+    box-shadow: 0px 3px 15px 0 rgba(155, 155, 155, 0.5);
+    margin-top: 20px;
+
+    & .title {
+        text-align: left;
+        font-family: "pretendard";
+        font-size: 20px;
+        font-weight: 800;
+    }
+
+    & .table {
+        border-collapse: separate;
+        border-spacing: 0px 5px;
+        margin-top: 10px;
+    }
+
+    & .table_tbody {
+        width: 100%;
+        border-collapse: separate;
+    }
+
+    & .table_number {
+        font-weight: 700;
+        width: fit-content;
+        text-align: right;
+        vertical-align: top;
+    }
+
+    & .table_text {
+        font-weight: 400;
+        padding-left: 10px;
+        text-align: left;
+        vertical-align: top;
+    }
+}
+
 .sheet_title {
     font-family: "pretendard";
     font-weight: 700;
@@ -230,6 +274,10 @@
     margin-top: 20px;
     display: flex;
     justify-content: center;
+}
+
+.space {
+    height: 20px;
 }
 
 .emoji_font {
@@ -305,7 +353,7 @@
 }
 
 .admin_login {
-    font-family: 'pretendard';
+    font-family: "pretendard";
     font-weight: 700;
     text-align: center;
     margin: auto;
