우산대여 관리자 우산수량 변경 기능 추가 / 우산대여 가능 수량 표시 변경

--- a/styles/components/Input/Input.module.scss
+++ b/styles/components/Input/Input.module.scss
@@ -22,6 +22,12 @@
   margin-top: 15px;
 }
 
+.bottom_sheet_box {
+  width: 100%;
+  max-width: 730px;
+  margin: auto;
+}
+
 .label {
   font-family: 'pretendard';
   font-size: 15px;
