--- a/styles/components/Input/Input.module.css
+++ b/styles/components/Input/Input.module.css
@@ -21,6 +21,12 @@
   margin-top: 15px;
 }
 
+.bottom_sheet_box {
+  width: 100%;
+  max-width: 730px;
+  margin: auto;
+}
+
 .label {
   font-family: "pretendard";
   font-size: 15px;
