--- a/styles/components/Footer/Footer.module.scss
+++ b/styles/components/Footer/Footer.module.scss
@@ -1,6 +1,6 @@
 .footer {
     width: fit-content;
-    height: 120px;
+    // height: 120px;
     // position: absolute;
     // transform: translateY(-100%);
     display: flex;
