--- a/styles/pages/services/Rental/Add/Add.module.css
+++ b/styles/pages/services/Rental/Add/Add.module.css
@@ -34,9 +34,7 @@
 }
 
 .title {
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
+  user-select: none;
 }
 .title .name {
   font-family: "pretendard";
@@ -53,9 +51,7 @@
 }
 
 .quantity {
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
+  user-select: none;
   font-family: "pretendard";
   font-weight: 700;
   font-size: 30px;
@@ -72,6 +68,7 @@
 }
 
 .sheet_description {
+  margin: auto;
   font-family: "pretendard";
   font-size: 15px;
   font-weight: 500;
@@ -79,6 +76,7 @@
   margin-top: 10px;
   margin-bottom: 20px;
   color: rgb(50, 50, 50);
+  width: calc(100% - 40px);
 }
 
 .sheet_loading_circle {
@@ -115,9 +113,7 @@
   font-weight: 700;
   font-size: 25px;
   text-align: left;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
+  user-select: none;
 }
 
 .not_open {
@@ -134,7 +130,7 @@
   font-weight: 600;
   text-align: center;
   margin-top: 20px;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
-}/*# sourceMappingURL=Add.module.css.map */
+  user-select: none;
+}
+
+/*# sourceMappingURL=Add.module.css.map */
